--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -1,10 +1,42 @@
-.form{
+  .form{
     background-color: #19173D;
     display: flex;
     height: 100vh;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+  }
+  
+  .left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    height: 100%;
+  }
+  
+  .vector1 svg{
+    width: 33rem;
+    height: 19rem;
+    flex-shrink: 0;
+  }
+  
+  .vector2 svg{
+    width: 34.25rem;
+    height: 20rem;
+    flex-shrink: 0;
+  }
+  
+  .vector3 svg{
+    width: 26rem;
+    height: 22rem;
+    flex-shrink: 0;
+    transform: rotate(-32deg);
+    -webkit-transform: rotate(-32deg);
+    -moz-transform: rotate(-32deg);
+    -ms-transform: rotate(-32deg);
+    -o-transform: rotate(-32deg);
   }
   
   .right{
@@ -14,14 +46,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: start;
     background-color: #fff;
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
   }
+  
   .title{
     padding: 50px;
   }
+  
   form{
     gap: 20px;
     padding: 50px;
@@ -30,63 +63,8 @@
     justify-content: center;
   }
   
-  form .input{
-    width: 23rem;
-    height: 2rem;
-    background-color: #D9D9D9;
-    border: none;
-  }
-  
-  .title{
-    line-height: 52px;
-    font-size: 3.4rem;
-  }
-  
-  .name{
-    display: flex;
-    gap: 50px;
-  }
-  
-  .lname, .fname, .email,.pw{
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
-    font-size: 1.8rem;
-  }
-  
-  .stay{
-    display: flex;
-    justify-content: start;
-  }
-  
-  #sty{
-    width: 30px;
-    height: 30px;
-  }
-  
-  #stas{
-    font-size: 1.5rem;
-    margin-left: 30px;
-  }
-  
   .name label::after, .email label::after, .pw label::after{
     content: "*";
     color: red;
   }
   
-  .button{
-    text-align: center;
-  }
-  .button button{
-    background: linear-gradient(to bottom, #61DE70 , #1DA72E);
-    border: none;
-    font-size: 1.3rem;
-    color: #fff;
-    width: 70%;
-    padding: 20px 0;
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-  }
