--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -50,21 +50,49 @@
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
   }
-  
-  .title{
-    padding: 50px;
+  .form-box.container{
+    padding: 0 40px;
   }
-  
-  form{
-    gap: 20px;
-    padding: 50px;
+  .name{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    gap: 100px;
   }
-  
-  .name label::after, .email label::after, .pw label::after{
-    content: "*";
-    color: red;
+  .form-box .input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin-top: 25px;
   }
-  
+  .input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-weight: 600;
+    border-bottom: 2px solid black;
+    padding-right: 23px;
+  }
+  .input-box label{
+    position: absolute;
+    top: 50%;
+    /* left: 0; */
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    font-size: 1em;
+    color: black;
+    transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
+}
+.input-box input:focus ~ label,
+.input-box input:valid ~ label  {
+  top: -5px;
+  border-color: rebeccapurple;
+  color: red;
+}
